Collapse segment tags based on parent width, some positioning fixes.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -610,6 +610,7 @@ code {
 .job-control-button {
   text-transform: unset;
   font-size: 0.75em !important;
+  white-space: nowrap;
 }
 
 .job-control-refuse-button {
